--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="woodly modern and minimalistic designs" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>woodly</title>
+    <title>woodly Localised</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
